testing more encoding problem on handling json data in python

--- a/python-encoding-error-note.ipynb
+++ b/python-encoding-error-note.ipynb
@@ -172,7 +172,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -248,7 +247,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -269,7 +267,9 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "with open('test.txt', 'r') as f:\n",
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
    "cell_type": "code",
    "execution_count": 123,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -518,8 +518,574 @@
    "metadata": {},
    "source": [
     "## 本阶段总结：一定记住，全文都统一用`str`格式字符串\n",
-    "### 只要盯紧requests等相关的网络操作就好了，只要控制好外来源的字符串，统一为`str`，其它一切都好说！"
+    "### 只要盯紧requests等相关的网络操作就好了，只要控制好外来源的字符串，统一为`str`，其它一切都好说！\n",
+    "\n",
+    "下面是一个从获取网络资源（含中文且被requests认为编码是ISO8850的网页）到本地操作且存储到本地文件的完整测试。"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "\n",
+    "r = requests.get('http://pycoders-weekly-chinese.readthedocs.io/en/latest/issue5/unipain.html')\n",
+    "\n",
+    "# write a webpage to local file\n",
+    "with open('test.html', 'w') as f:\n",
+    "    f.write( r.content )\n",
+    "\n",
+    "# read from a local html file\n",
+    "with open('test.html', 'r') as f:\n",
+    "    ss = f.read()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 再来试一个从网上获取json并转化为JSON格式变量然后又存为文件的例子"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 261,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests,json\n",
+    "\n",
+    "r = requests.get('https://api.github.com/repos/solomonxie/solomonxie.github.io/issues/25/comments')\n",
+    "\n",
+    "# 获取到我的github中某条issue的所有评论，形式为<JSON格式的字符串>\n",
+    "comments = json.loads( r.content )\n",
+    "# 取某一条评论查看内容（中文）\n",
+    "cc = comments[0]['body'][0:10] # 取出的内容是'## 配置：先从配置'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 242,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "u'## \\u914d\\u7f6e\\uff1a\\u5148\\u4ece\\u914d\\u7f6e'"
+      ]
+     },
+     "execution_count": 242,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 可以看到是<unicode格式的字符串>\n",
+    "cc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 243,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "## 配置：先从配置\n"
+     ]
+    }
+   ],
+   "source": [
+    "# <print大法>，即使是<unicode格式的字符串>也能直接显示出来\n",
+    "print cc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 255,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "UnicodeDecodeError",
+     "evalue": "'ascii' codec can't decode byte 0xe9 in position 0: ordinal not in range(128)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mUnicodeDecodeError\u001b[0m                        Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-255-0d3b2b0a9339>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# 那么能不能在操作中正常使用这个unicode字符串呢？显然不行\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;34m'配'\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mcc\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mUnicodeDecodeError\u001b[0m: 'ascii' codec can't decode byte 0xe9 in position 0: ordinal not in range(128)"
+     ]
+    }
+   ],
+   "source": [
+    "# 那么能不能在操作中正常使用这个unicode字符串呢？显然不行\n",
+    "'配' in cc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 258,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "UnicodeDecodeError",
+     "evalue": "'ascii' codec can't decode byte 0xe4 in position 0: ordinal not in range(128)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mUnicodeDecodeError\u001b[0m                        Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-258-36bd63426932>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# <JSON对象>里unicode格式的数据，和<手动声明的str格式字符串>一起操作会怎么样？\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mcc\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'你好'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mUnicodeDecodeError\u001b[0m: 'ascii' codec can't decode byte 0xe4 in position 0: ordinal not in range(128)"
+     ]
+    }
+   ],
+   "source": [
+    "# <JSON对象>里unicode格式的数据，和<手动声明的str格式字符串>一起操作会怎么样？\n",
+    "cc + '你好'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 253,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "u'\\u4f60\\u597d## \\u914d\\u7f6e\\uff1a\\u5148\\u4ece\\u914d\\u7f6e'"
+      ]
+     },
+     "execution_count": 253,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'你好'.decode('utf-8') + cc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 259,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'## \\xe9\\x85\\x8d\\xe7\\xbd\\xae\\xef\\xbc\\x9a\\xe5\\x85\\x88\\xe4\\xbb\\x8e\\xe9\\x85\\x8d\\xe7\\xbd\\xae'"
+      ]
+     },
+     "execution_count": 259,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 查看它转化为<str格式的字符串>的实质内容\n",
+    "cc.encode('utf-8')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 262,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 262,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 意思是，即使字符串本身显示的是'\\xe9\\x85\\x8d` 也能直接匹配到\n",
+    "'配' in cc.encode('utf-8')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 260,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "## 配置：\n"
+     ]
+    }
+   ],
+   "source": [
+    "# <JSON对象>的某一部分数据取出来后，写入文本文档然后再读出来\n",
+    "with open('test.txt', 'w') as f:\n",
+    "    f.write( cc.encode('utf-8') )\n",
+    "with open('test.txt', 'r') as f:\n",
+    "    print f.read()[0:12]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "也就是说，其实，从网络资源获取，到`json.load()`将json字符串转化为json对象的。\n",
+    "\n",
+    "### 将`JSON对象`的某一段内容编码后，可以正常存取文件，那么再来试试将`JSON对象`整体存到文本文件中。\n",
+    "### 重点必须要在json.dumps()里把`ensure_ascii`参数选为False !否则它会将所有非ascii码用repr()强制转化为代号（而非汉字）"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 352,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'{\"body\": \"\\xe4\\xbd\\xa0\\xe5\\xa5\\xbd\"}'"
+      ]
+     },
+     "execution_count": 352,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "outgoing = json.dumps({\"body\": \"你好\"}, ensure_ascii=False)\n",
+    "\n",
+    "outgoing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 339,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{\"body\": \"## 配置：先从配 <type 'unicode'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print outgoing[0:20], type(outgoing)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 349,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{\"body\": \"## 配置：先从配 <type 'unicode'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# @网络资源到本地存储真实测试\n",
+    "outgoing = json.dumps( comments, ensure_ascii=False )\n",
+    "\n",
+    "print outgoing[0:20], type(outgoing)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 348,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{\"body\": \"## 配置 <type 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open('test.txt', 'w') as f:\n",
+    "    f.write(outgoing.encode('utf-8'))\n",
+    "with open('test.txt', 'r') as f:\n",
+    "    read = f.read()\n",
+    "    \n",
+    "print read[0:20], type(read)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 大功告成！"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'confidence': 0.505, 'encoding': 'utf-8', 'language': ''}"
+      ]
+     },
+     "execution_count": 161,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# @1 chardet库的方法\n",
+    "from chardet import detect\n",
+    "detect(b'\\xe9\\x85\\x8d')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "iso-8859-9\n"
+     ]
+    }
+   ],
+   "source": [
+    "# @2 由BeautifulSoup制作的UnicodeDammit方法\n",
+    "from bs4 import UnicodeDammit\n",
+    "dammit = UnicodeDammit(\"Sacr\\xc3\\xa9 bleu!\")\n",
+    "print dammit.original_encoding\n",
+    "# 'utf-8'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 183,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "u'Sacr\\xc3\\xa9 bleu!'"
+      ]
+     },
+     "execution_count": 183,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dammit.unicode_markup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sacré bleu!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'latin-1'"
+      ]
+     },
+     "execution_count": 171,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dammit = UnicodeDammit(\"Sacr\\xe9 bleu!\", [\"latin-1\", \"iso-8859-1\"])\n",
+    "print(dammit.unicode_markup)\n",
+    "# Sacré bleu!\n",
+    "dammit.original_encoding\n",
+    "# 'latin-1'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
