finished testing python handling json encoding error

--- a/python-encoding-error-note.ipynb
+++ b/python-encoding-error-note.ipynb
@@ -254,8 +254,15 @@
     "\n",
     "以上是我们用`显性`字符串来比较两种格式字符串的区别。\n",
     "\n",
-    "但是，我们经常性处理python编码问题，都不是在这种`显性`的字符串上出现的，不是从网上爬取的就是从本地文件读取的，意思就是文件内容庞大，编码格式很难猜到是什么。\n",
-    "所以这里我们将问题再拆分为两部分讨论：本地文件和网络资源。\n",
+    "但是，我们经常性处理python编码问题，都不是在这种`显性`的字符串上出现的，不是从网上爬取的就是从本地文件读取的。\n",
+    "意思就是网络来源文件内容庞大复杂，编码格式很难猜到是什么。\n",
+    "\n",
+    "> 不过如果你非要猜的话，可以自己手动测试一下`chardet`库和`UnicodeDammit`两种外来库函数来猜。\n",
+    "它们猜的时候会告诉你某段字符串的`可能格式`和这个可能性的机率。\n",
+    "看着很爽，但是光用`你好`两个字来实测一下就知道\n",
+    "\n",
+    "\n",
+    "这里为了思路清晰一点，我们要拆分为两部分进行测试：本地文件和网络资源。\n",
     "\n",
     "## 本地文件编码测试\n",
     "首先在本地建立一个有中文的以`utf-8`格式保存的文本文件（实际上无论.txt还是.md等都无所谓，内容是一样的）。\n",
@@ -440,7 +447,8 @@
    "source": [
     "> 这样就明白了：除了r.text返回的内容外，其它几乎都是使用str格式，也就是bytes二进制码。所以我们只要转化requests相关的内容就行！\n",
     "\n",
-    "实际上，requests返回的response中, 除了用`response.text`获取内容，我们还可以用`response.content`获取同样的内容，只不过是bytes格式。\n",
+    "实际上，requests返回的response中, 除了用`response.text`获取内容，\n",
+    "我们还可以用`response.content`获取同样的内容，`.content`返回的是bytes格式。\n",
     "\n",
     "那就正和我们意，不用再去转化每一个地方的字符串，而只要盯紧这一个地方就足够了。\n",
     "\n",
@@ -486,7 +494,8 @@
    "source": [
     "这里好像没问题，变成了unicode。但是！但是一旦我们需要输出字符串，那么就必须要str格式的才能输出。\n",
     "\n",
-    "这时候我们怎么办呢？只能用`bytes()`再把它转成str格式，同理，因为不知道来源的编码格式，不能用`.encode('utf-8')`这个方法来转换。"
+    "这时候我们怎么办呢？只能用`bytes()`再把它转成str格式。\n",
+    "同理，因为不知道来源的编码格式，不能用`.encode('utf-8')`这个方法来转换。"
    ]
   },
   {
@@ -518,7 +527,7 @@
    "metadata": {},
    "source": [
     "## 本阶段总结：一定记住，全文都统一用`str`格式字符串\n",
-    "### 只要盯紧requests等相关的网络操作就好了，只要控制好外来源的字符串，统一为`str`，其它一切都好说！\n",
+    "> 只要盯紧requests等相关的网络操作就好了，只要控制好外来源的字符串，统一为`str`，其它一切都好说！\n",
     "\n",
     "下面是一个从获取网络资源（含中文且被requests认为编码是ISO8850的网页）到本地操作且存储到本地文件的完整测试。"
    ]
@@ -548,7 +557,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 再来试一个从网上获取json并转化为JSON格式变量然后又存为文件的例子"
+    "## 再来试一个从网上获取json并又存到本地文件的例子"
    ]
   },
   {
@@ -559,238 +568,137 @@
    "source": [
     "import requests,json\n",
     "\n",
-    "r = requests.get('https://api.github.com/repos/solomonxie/solomonxie.github.io/issues/25/comments')\n",
+    "r = requests.get('https://api.github.com/repos/solomonxie/\\\n",
+    "solomonxie.github.io/issues/25/comments')\n",
     "\n",
     "# 获取到我的github中某条issue的所有评论，形式为<JSON格式的字符串>\n",
     "comments = json.loads( r.content )\n",
+    "\n",
     "# 取某一条评论查看内容（中文）\n",
     "cc = comments[0]['body'][0:10] # 取出的内容是'## 配置：先从配置'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
-   "metadata": {},
+   "execution_count": 359,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "u'## \\u914d\\u7f6e\\uff1a\\u5148\\u4ece\\u914d\\u7f6e'"
+       "(u'## \\u914d\\u7f6e\\uff1a\\u5148\\u4ece\\u914d\\u7f6e', unicode)"
       ]
      },
-     "execution_count": 242,
+     "execution_count": 359,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 可以看到是<unicode格式的字符串>\n",
-    "cc"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 243,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "## 配置：先从配置\n"
-     ]
-    }
-   ],
-   "source": [
-    "# <print大法>，即使是<unicode格式的字符串>也能直接显示出来\n",
-    "print cc"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 255,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "UnicodeDecodeError",
-     "evalue": "'ascii' codec can't decode byte 0xe9 in position 0: ordinal not in range(128)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mUnicodeDecodeError\u001b[0m                        Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-255-0d3b2b0a9339>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# 那么能不能在操作中正常使用这个unicode字符串呢？显然不行\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;34m'配'\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mcc\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mUnicodeDecodeError\u001b[0m: 'ascii' codec can't decode byte 0xe9 in position 0: ordinal not in range(128)"
-     ]
-    }
-   ],
-   "source": [
-    "# 那么能不能在操作中正常使用这个unicode字符串呢？显然不行\n",
-    "'配' in cc"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 258,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "UnicodeDecodeError",
-     "evalue": "'ascii' codec can't decode byte 0xe4 in position 0: ordinal not in range(128)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mUnicodeDecodeError\u001b[0m                        Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-258-36bd63426932>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# <JSON对象>里unicode格式的数据，和<手动声明的str格式字符串>一起操作会怎么样？\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mcc\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'你好'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mUnicodeDecodeError\u001b[0m: 'ascii' codec can't decode byte 0xe4 in position 0: ordinal not in range(128)"
-     ]
-    }
-   ],
-   "source": [
-    "# <JSON对象>里unicode格式的数据，和<手动声明的str格式字符串>一起操作会怎么样？\n",
-    "cc + '你好'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 253,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "u'\\u4f60\\u597d## \\u914d\\u7f6e\\uff1a\\u5148\\u4ece\\u914d\\u7f6e'"
-      ]
-     },
-     "execution_count": 253,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "'你好'.decode('utf-8') + cc"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 259,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'## \\xe9\\x85\\x8d\\xe7\\xbd\\xae\\xef\\xbc\\x9a\\xe5\\x85\\x88\\xe4\\xbb\\x8e\\xe9\\x85\\x8d\\xe7\\xbd\\xae'"
-      ]
-     },
-     "execution_count": 259,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# 查看它转化为<str格式的字符串>的实质内容\n",
-    "cc.encode('utf-8')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 262,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 262,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# 意思是，即使字符串本身显示的是'\\xe9\\x85\\x8d` 也能直接匹配到\n",
-    "'配' in cc.encode('utf-8')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 260,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "## 配置：\n"
-     ]
-    }
-   ],
-   "source": [
-    "# <JSON对象>的某一部分数据取出来后，写入文本文档然后再读出来\n",
-    "with open('test.txt', 'w') as f:\n",
-    "    f.write( cc.encode('utf-8') )\n",
-    "with open('test.txt', 'r') as f:\n",
-    "    print f.read()[0:12]"
+    "cc, type(cc)\n",
+    "\n",
+    "# 可以看到输出的是<unicode格式的字符串> 注：这时如果用print是能正常出中文的"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "也就是说，其实，从网络资源获取，到`json.load()`将json字符串转化为json对象的。\n",
+    "### 好，到这里先停一下！\n",
+    "JSON的读取到目前为止，都是正常的：JSON Object对象给出的值都是unicode，没有被莫名转义，也没有报错误。\n",
+    "> 但是，unicode格式，意味着它和str格式不兼容！\n",
+    "这时，害羞的大姑娘Unicode刚出炉，你不能在这个时候让它和Str操作在一起！\n",
+    "报错也往往就在这种疏于防备的时候！\n",
     "\n",
-    "### 将`JSON对象`的某一段内容编码后，可以正常存取文件，那么再来试试将`JSON对象`整体存到文本文件中。\n",
-    "### 重点必须要在json.dumps()里把`ensure_ascii`参数选为False !否则它会将所有非ascii码用repr()强制转化为代号（而非汉字）"
+    "比如你看："
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 352,
+   "execution_count": 371,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 ## 配置：先从配置显性声明的字符串\n",
+      "2 ## 配置：先从配置显性声明的字符串\n",
+      "3"
+     ]
+    },
+    {
+     "ename": "UnicodeDecodeError",
+     "evalue": "'ascii' codec can't decode byte 0xe6 in position 0: ordinal not in range(128)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mUnicodeDecodeError\u001b[0m                        Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-371-41866659ac68>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mencode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'utf-8'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'显性声明的字符串'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcc\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'显性声明的字符串'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdecode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'utf-8'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mprint\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcc\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'显性声明的字符串'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mUnicodeDecodeError\u001b[0m: 'ascii' codec can't decode byte 0xe6 in position 0: ordinal not in range(128)"
+     ]
+    }
+   ],
+   "source": [
+    "print 1, cc.encode('utf-8') + '显性声明的字符串'\n",
+    "print 2, cc + '显性声明的字符串'.decode('utf-8')\n",
+    "print 3, cc + '显性声明的字符串'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "上面打印了三条Unicode和Str的结合，\n",
+    "前两条分别是以Str格式的结合，以Unicode格式的结合。\n",
+    "但是第三条，把两个不同格式的字符串结合，就出错了。\n",
+    "\n",
+    "对不起，这里不是Javascript，变量不可以任意交合。Python对变量和编码都是极其谨慎的。\n",
+    "\n",
+    "所以明白了这点，我们再继续。\n",
+    "\n",
+    "### 上面获得了JSON Object对象，那么再来试试将`JSON对象`整体存到文本文件中。\n",
+    "如果要存到本地文件，那么就必须把Object对象转换为Str格式的字符串。\n",
+    "json库自带.dumps()函数可以进行转化。\n",
+    "但是这里问题出现了！我们来小试一下："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 370,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " {\"body\": \"\\u4f60\\u597d\"}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print json.dumps( {\"body\": \"你好\"} )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> 竟然连`print大法`都不能把`json.dumps()`返回的内容正确打印出来。经过各种测试和查看官网对于此函数的文档，发现：\n",
+    "\n",
+    "### 原来`json.dumps()`是默认所有非ascii码强制转化为代号（而非汉字）的，于`repr()`效果等同！\n",
+    "[官方文档](https://docs.python.org/2/library/json.html#encoders-and-decoders)里有说明，`json.dumps()`里面有个`ensure_ascii`参数，默认为True。\n",
+    "意思就是默认把所有非ascii字码用`\\`强制转化。所以，为了关闭这个功能，我们必须把它设为`False`.\n",
+    "下面是个小测试："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 372,
    "metadata": {},
    "outputs": [
     {
@@ -799,57 +707,34 @@
        "'{\"body\": \"\\xe4\\xbd\\xa0\\xe5\\xa5\\xbd\"}'"
       ]
      },
-     "execution_count": 352,
+     "execution_count": 372,
      "metadata": {},
      "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "outgoing = json.dumps({\"body\": \"你好\"}, ensure_ascii=False)\n",
-    "\n",
-    "outgoing"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 339,
-   "metadata": {},
-   "outputs": [
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{\"body\": \"## 配置：先从配 <type 'unicode'>\n"
+      "\n"
      ]
     }
    ],
    "source": [
-    "print outgoing[0:20], type(outgoing)"
+    "json.dumps({\"body\": \"你好\"}, ensure_ascii=False)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 349,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[{\"body\": \"## 配置：先从配 <type 'unicode'>\n"
-     ]
-    }
-   ],
    "source": [
-    "# @网络资源到本地存储真实测试\n",
-    "outgoing = json.dumps( comments, ensure_ascii=False )\n",
+    "### 这样一来JSON在Python里的编码问题就解决了：须用`json.dumps(obj,  ensure_ascii=False)`来转化为字符串\n",
     "\n",
-    "print outgoing[0:20], type(outgoing)"
+    "下面是完整的代码测试："
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 357,
    "metadata": {},
    "outputs": [
     {
@@ -861,6 +746,16 @@
     }
    ],
    "source": [
+    "# @网络资源到本地存储真实测试\n",
+    "import requests,json\n",
+    "\n",
+    "r = requests.get('https://api.github.com/repos/solomonxie/solomonxie.github.io/issues/25/comments')\n",
+    "\n",
+    "# 获取到我的github中某条issue的所有评论，形式为<JSON格式的字符串>\n",
+    "comments = json.loads( r.content )\n",
+    "\n",
+    "outgoing = json.dumps( comments, ensure_ascii=False )\n",
+    "\n",
     "with open('test.txt', 'w') as f:\n",
     "    f.write(outgoing.encode('utf-8'))\n",
     "with open('test.txt', 'r') as f:\n",
